--- a/public/css/src/cheers/cheers.css
+++ b/public/css/src/cheers/cheers.css
@@ -98,8 +98,8 @@
     z-index: 1000;
 }
 .cheers-back-pictures {
-    width: 150px;
-    height: 150px;
+    width: 110px;
+    height: 110px;
     margin: 20px auto;
     flex-shrink: 0;
     font-size: 12px;
@@ -144,12 +144,15 @@
     /* justify-content: center; */
     align-items: center;
     max-width: 300px;
-    margin: 10px auto 30px;
-    background: #1b69ec;
-    background: #4ebb4f;
+    margin: -33px auto 30px;
+    /* background: #1b69ec; */
+    /* background: #34ab53; */
+    background: #e94f6a;
+    z-index: 1;
     padding: 8px 20px;
     border-radius: 100px;
     color: white;
+    border: 2px solid;
 }
 .cheers-back-groupname__h1 {
     font-size: 12px;
